calico-enterprise_versioned_docs/version-3.16/operations/cnx/access-the-manager.mdx
---
description: Configure access to the Calico Enterprise Manager user interface.
---

import variables from '@site/calico-enterprise_versioned_docs/version-3.16/variables';

# Configure access to Calico Enterprise Manager UI

import Tabs from '@theme/Tabs';
import TabItem from '@theme/TabItem';

## Big picture

Configure access to the {variables.prodname} Manager user interface.

## Value

For security, the {variables.prodname} Manager UI is not exposed outside of the cluster by default. You can configure access to {variables.prodname} Manager UI using ingress, a load balancer service, or port forwarding.

## Before you begin

**Required**

- [Install {variables.prodname}](../../getting-started/index.mdx)
- Choose one of the following access options and complete the required configuration:

| Option             | Description                                                                                                                                                                                                                                                                            | Requirement                                                                                                                                                                                                                                                                                                                                                                                                               |
| ------------------ | -------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------- |
| Kubernetes ingress | Configure your cluster with an ingress controller to implement the `Ingress` resource using [Kubernetes ingress](https://kubernetes.io/docs/concepts/services-networking/service/#loadbalancer).                                                                                       | Ensure the {variables.prodname} Manager receives a HTTPS (TLS) connection (not unencrypted HTTP). If you require TLS termination at your ingress, you must use a proxy that supports transparent HTTP/2 proxying, (for example, Envoy), or re-originate a TLS connection from your proxy to the {variables.prodname} Manager. If you do not require TLS termination, configure your proxy to “pass thru” the TLS to {variables.prodname} Manager. |
| Load balancer      | Configure your cluster with a service load balancer controller to implement the external load balancer. See [Kubernetes loadbalancer](https://kubernetes.io/docs/tasks/access-application-cluster/create-external-load-balancer/)                                                      | Ensure the {variables.prodname} Manager receives a HTTPS (TLS) connection (not unencrypted HTTP). If you require TLS termination at your load balancer, you must use a load balancer that supports transparent HTTP/2 proxying, or re-originate a TLS connection from your load balancer to the {variables.prodname} Manager. If you do not require TLS termination, configure your proxy to “pass thru” the TLS to {variables.prodname} Manager. |
| Port forwarding    | Forward traffic from a local port to the Kubernetes API server, where it is proxied to the Manager UI. This approach is **not recommended for production**, but is useful if you do not have a load balancer or ingress infrastructure configured, or you need to get started quickly. | n/a                                                                                                                                                                                                                                                                                                                                                                                                                       |
| OpenShift routes   | Use OpenShift routes to expose a service by giving it an externally-reachable hostname (for example, `www.example.com`) .                                                                                                                                                              | n/a                                                                                                                                                                                                                                                                                                                                                                                                                       |

## How to

### Configure access to {variables.prodname} Manager UI

<Tabs>
<TabItem label="Ingress" value="Ingress-0">

**Basic ingress controller, no modification**

The following example uses `tigera-manager` as the backend service without modification. Use the `tigera-manager` service only when edits to the service are not required. (Note if you try to make changes to `tigera-manager`, changes may appear to take effect, but the service always resets to the default and is not overwritten.)

```yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tigera-manager
  namespace: tigera-manager
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: tigera-manager
                port:
                  number: 9443
```

**Advanced ingress controllers, with modifications**

If you need to annotate or modify the service, you must create your own service (`serviceName: <your own name>`) in the `tigera-manager` namespace, and use it in the ingress resource. For example:

```yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tigera-manager
  namespace: tigera-manager
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: annotated-service
                port:
                  number: 9443
```

### Log in to {variables.prodname} Manager UI

Access the {variables.prodname} Manager UI in your browser at: `https://localhost:9443`

</TabItem>
<TabItem label="Load balancer service" value="Load balancer service-1">

To expose the manager using a load balancer, create the following service.

```yaml
kind: Service
apiVersion: v1
metadata:
  name: tigera-manager-external
  namespace: tigera-manager
spec:
  type: LoadBalancer
  selector:
    k8s-app: tigera-manager
  externalTrafficPolicy: Local
  ports:
    - port: 9443
      targetPort: 9443
      protocol: TCP
```

After creating the service, it may take a few minutes for the load balancer to be created. Once complete, the load balancer IP address appears as an `ExternalIP` in `kubectl get services -n tigera-manager tigera-manager-external`.

### Log in to {variables.prodname} Manager UI

Access the {variables.prodname} Manager UI in your browser at: `https://localhost:9443`

</TabItem>
<TabItem label="Port forwarding" value="Port forwarding-2">

To forward traffic locally, use the following command:

```bash
kubectl port-forward -n tigera-manager service/tigera-manager 9443:9443
```

### Log in to {variables.prodname} Manager UI

Access the {variables.prodname} Manager UI in your browser at: `https://localhost:9443`

</TabItem>
<TabItem label="OpenShift routes" value="OpenShift routes-3">

To expose Manager UI using OpenShift routes, create the following route with these required parameters:

- host: `<clustername>.<URL>`
- name: `tigera-manager`
- targetPort: `9443`

**Example**

```yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: tigera-manager
  namespace: tigera-manager
spec:
  host: manager.apps.demo-ocp.tigera-solutions.io
  to:
    kind: Service
    name: tigera-manager
    weight: 100
  port:
    targetPort: 9443
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
```

### Log in to {variables.prodname} Manager UI

Access the {variables.prodname} Manager UI in your browser using the URL with clustername. For example: `https://manager.apps.demo-ocp.tigera-solutions.io:9443`

</TabItem>

</Tabs>

## Additional resources

- [Authentication quickstart](authentication-quickstart.mdx)
- [Configure an external identity provider](configure-identity-provider.mdx)
